--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="uk.ac.aber.dcs.cs.cs31620.majorproject">
+    package="uk.ac.aber.dcs.cs39440.myvitalife">
 
     <application
         android:allowBackup="true"
@@ -9,15 +9,14 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MajorProject"
+        android:theme="@style/Theme.MyVitaLife"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.MajorProject">
+            android:theme="@style/Theme.MyVitaLife">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
