--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -45,7 +46,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.2.0'
+        kotlinCompilerExtensionVersion = "1.2.0"
     }
     packagingOptions {
         resources {
@@ -55,37 +56,56 @@ android {
 }
 
 dependencies {
-
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation "androidx.compose.material:material:1.3.0-alpha02"
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation 'androidx.compose.material3:material3:1.0.0-alpha14'
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-    implementation 'androidx.activity:activity-compose:1.5.1'
-    implementation 'androidx.navigation:navigation-compose:2.5.1'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'androidx.activity:activity-compose:1.6.1'
+    implementation 'androidx.navigation:navigation-compose:2.5.3'
     implementation "androidx.constraintlayout:constraintlayout-compose:1.1.0-alpha03"
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
-    implementation "androidx.compose.material:material-icons-extended:$compose_version"
-    implementation "androidx.datastore:datastore-preferences:1.0.0"
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.3.3'
+    debugImplementation 'androidx.compose.ui:ui-tooling:1.3.3'
+    debugImplementation 'androidx.compose.ui:ui-test-manifest:1.3.3'
+    implementation 'androidx.compose.material:material-icons-extended:1.3.1'
+    implementation 'androidx.datastore:datastore-preferences:1.0.0'
+
+    implementation 'com.maxkeppeler.sheets-compose-dialogs:core:1.0.0' // necessary
+    implementation "com.maxkeppeler.sheets-compose-dialogs:calendar:1.0.0"
+    implementation "com.maxkeppeler.sheets-compose-dialogs:clock:1.0.0"
 
     // Room
-    implementation 'androidx.room:room-runtime:2.4.3'
-    implementation 'androidx.room:room-ktx:2.4.3'
-    kapt 'androidx.room:room-compiler:2.4.3'
+//    implementation 'androidx.room:room-runtime:2.5.0'
+//    implementation 'androidx.room:room-ktx:2.5.0'
+//    kapt 'androidx.room:room-compiler:2.5.0'
 
     // LiveData
-    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+//    implementation "androidx.compose.runtime:runtime-livedata:1.3.3"
 
     // ViewModels
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
+//    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
 
     // Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.8'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+
+    //FireBase
+    implementation platform('com.google.firebase:firebase-bom:31.2.3')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+
+//    implementation 'androidx.core:core-ktx:1.9.0'
+//
+//    implementation 'androidx.compose.material3:material3:1.0.0-alpha14'
+//    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+//    implementation 'androidx.activity:activity-compose:1.6.1'
+//    testImplementation 'junit:junit:4.13.2'
+//    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+//    //implementation "androidx.constraintlayout:constraintlayout-compose:1.1.0-alpha03"
+//    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.3"
+//    debugImplementation "androidx.compose.ui:ui-tooling:1.3.3"
+//    debugImplementation "androidx.compose.ui:ui-test-manifest:1.3.3"
 }
