--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,7 @@ dependencies {
     implementation 'androidx.compose.material:material-icons-extended:1.3.1'
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
 
+    // Date and time pickers
     implementation 'com.maxkeppeler.sheets-compose-dialogs:core:1.0.0' // necessary
     implementation "com.maxkeppeler.sheets-compose-dialogs:calendar:1.0.0"
     implementation "com.maxkeppeler.sheets-compose-dialogs:clock:1.0.0"
@@ -92,12 +93,13 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
 
-    //FireBase
+    //Firebase
     implementation platform('com.google.firebase:firebase-bom:31.2.3')
     implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-database-ktx'
+//    implementation 'com.google.firebase:firebase-firestore-ktx'
 
-//    implementation 'androidx.core:core-ktx:1.9.0'
-//
+    
 //    implementation 'androidx.compose.material3:material3:1.0.0-alpha14'
 //    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
 //    implementation 'androidx.activity:activity-compose:1.6.1'
@@ -108,4 +110,8 @@ dependencies {
 //    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.3"
 //    debugImplementation "androidx.compose.ui:ui-tooling:1.3.3"
 //    debugImplementation "androidx.compose.ui:ui-test-manifest:1.3.3"
+}
+
+kapt {
+    correctErrorTypes = true
 }
