--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,10 +84,10 @@ dependencies {
 //    kapt 'androidx.room:room-compiler:2.5.0'
 
     // LiveData
-//    implementation "androidx.compose.runtime:runtime-livedata:1.3.3"
+    implementation "androidx.compose.runtime:runtime-livedata:1.3.3"
 
     // ViewModels
-//    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
 
     // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
