--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'dagger.hilt.android.plugin'
     id 'kotlin-kapt'
     id 'com.google.gms.google-services'
 }
@@ -78,11 +79,6 @@ dependencies {
     implementation "com.maxkeppeler.sheets-compose-dialogs:calendar:1.0.0"
     implementation "com.maxkeppeler.sheets-compose-dialogs:clock:1.0.0"
 
-    // Room
-//    implementation 'androidx.room:room-runtime:2.5.0'
-//    implementation 'androidx.room:room-ktx:2.5.0'
-//    kapt 'androidx.room:room-compiler:2.5.0'
-
     // LiveData
     implementation "androidx.compose.runtime:runtime-livedata:1.3.3"
 
@@ -101,6 +97,14 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
     implementation 'com.google.android.gms:play-services-auth:20.4.1'
 
+    //Dagger - Hilt
+    kapt "com.google.dagger:hilt-android-compiler:2.38.1"
+    kapt 'androidx.hilt:hilt-compiler:1.0.0'
+    implementation "com.google.dagger:hilt-android:2.38.1"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+    kaptTest 'com.google.dagger:hilt-android-compiler:2.38.1'
+    kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.38.1'
+    testImplementation 'com.google.dagger:hilt-android-testing:2.44'
     
 //    implementation 'androidx.compose.material3:material3:1.0.0-alpha14'
 //    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
