--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,10 @@ buildscript {
         google()  // Google's Maven repository
         mavenCentral()  // Maven Central repository
     }
-//    dependencies {
-//        // Add the dependency for the Google services Gradle plugin
-//        classpath 'com.google.gms:google-services:4.3.15'
-//    }
+    dependencies {
+        // Add the dependency for the Google services Gradle plugin
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.40.5"
+    }
 }
 
 plugins{
