--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'dagger.hilt.android.plugin'
+//    id 'com.google.dagger.hilt.android'
     id 'kotlin-kapt'
     id 'com.google.gms.google-services'
 }
@@ -98,13 +98,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:20.4.1'
 
     //Dagger - Hilt
-    kapt "com.google.dagger:hilt-android-compiler:2.38.1"
-    kapt 'androidx.hilt:hilt-compiler:1.0.0'
-    implementation "com.google.dagger:hilt-android:2.38.1"
-    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
-    kaptTest 'com.google.dagger:hilt-android-compiler:2.38.1'
-    kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.38.1'
-    testImplementation 'com.google.dagger:hilt-android-testing:2.44'
+//    implementation 'com.google.dagger:hilt-android:2.44'
+//    kapt 'com.google.dagger:hilt-android-compiler:2.44'
+//    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
     
 //    implementation 'androidx.compose.material3:material3:1.0.0-alpha14'
 //    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
