--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,6 @@ buildscript {
         google()  // Google's Maven repository
         mavenCentral()  // Maven Central repository
     }
-    dependencies {
-        // Add the dependency for the Google services Gradle plugin
-        classpath "com.google.dagger:hilt-android-gradle-plugin:2.40.5"
-    }
 }
 
 plugins{
@@ -18,6 +14,7 @@ plugins{
     id 'com.android.library' version '7.4.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
     id 'com.google.gms.google-services' version '4.3.15' apply false
+//    id 'com.google.dagger.hilt.android' version "2.44" apply false
 }
 
 task clean(type: Delete) {
