--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-//    id 'com.google.dagger.hilt.android'
     id 'kotlin-kapt'
     id 'com.google.gms.google-services'
 }
@@ -72,6 +71,7 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-tooling:1.3.3'
     debugImplementation 'androidx.compose.ui:ui-test-manifest:1.3.3'
     implementation 'androidx.compose.material:material-icons-extended:1.3.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
 
     // Date and time pickers
