--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
     id 'com.google.gms.google-services'
 }
 
@@ -99,10 +100,12 @@ dependencies {
 
     //GSON
     implementation 'com.google.code.gson:gson:2.10.1'
+
     //Dagger - Hilt
-//    implementation 'com.google.dagger:hilt-android:2.44'
-//    kapt 'com.google.dagger:hilt-android-compiler:2.44'
-//    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+    kapt 'androidx.hilt:hilt-compiler:1.0.0'
+    implementation 'com.google.dagger:hilt-android:2.44'
+    kapt 'com.google.dagger:hilt-android-compiler:2.44'
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 
 //    implementation 'androidx.compose.material3:material3:1.0.0-alpha14'
 //    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
