--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,10 @@ buildscript {
     ext {
         compose_version = '1.3.3'
     }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.0"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.42"
+    }
     repositories {
         // Make sure that you have the following two repositories
         google()  // Google's Maven repository
