--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,6 +111,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
+    //Permissions
+    implementation 'com.google.accompanist:accompanist-permissions:0.21.1-beta'
+
 //    implementation 'androidx.compose.material3:material3:1.0.0-alpha14'
 //    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
 //    implementation 'androidx.activity:activity-compose:1.6.1'
